--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -8,7 +8,7 @@
         the web that can be
         used for commercial and print purposes.
       </p>
-      <button>Creat Now</button>
+      <button routerLink="/generate">Creat Now</button>
     </div>
     <div>
       <img src="../../../assets/images/landing.png" alt="">
